# concourse-github-check-resource

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml
schema/: input.json
src/: check  in  out
