[tool.poetry]
name = "concourse-github-check-resource"
version = "0"
description = "Concourse resource for GitHub Checks"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
jsonschema = "^3.2.0"
rfc3987 = "^1.3.8"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-json = "*"
mypy = "*"
pylint = "*"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
